troca de cores e mais conteudo

--- a/main.css
+++ b/main.css
@@ -29,9 +29,9 @@
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
-4. Use the user's configured `sans` font-family by default.
-5. Use the user's configured `sans` font-feature-settings by default.
-6. Use the user's configured `sans` font-variation-settings by default.
+4. Use the user's configured sans font-family by default.
+5. Use the user's configured sans font-feature-settings by default.
+6. Use the user's configured sans font-variation-settings by default.
 7. Disable tap highlights on iOS
 */
 
@@ -58,7 +58,7 @@ html,
 
 /*
 1. Remove the margin in all browsers.
-2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+2. Inherit line-height from html so users can set them as a class directly on the html element.
 */
 
 body {
@@ -125,10 +125,10 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font-family by default.
-2. Use the user's configured `mono` font-feature-settings by default.
-3. Use the user's configured `mono` font-variation-settings by default.
-4. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured mono font-family by default.
+2. Use the user's configured mono font-feature-settings by default.
+3. Use the user's configured mono font-variation-settings by default.
+4. Correct the odd em font sizing in all browsers.
 */
 
 code,
@@ -154,7 +154,7 @@ small {
 }
 
 /*
-Prevent `sub` and `sup` elements from affecting the line height in all browsers.
+Prevent sub and sup elements from affecting the line height in all browsers.
 */
 
 sub,
@@ -254,7 +254,7 @@ Use the modern Firefox focus style for all focusable elements.
 }
 
 /*
-Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
+Remove the additional :invalid styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
 */
 
 :-moz-ui-invalid {
@@ -300,7 +300,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 /*
 1. Correct the inability to style clickable types in iOS and Safari.
-2. Change font properties to `inherit` in Safari.
+2. Change font properties to inherit in Safari.
 */
 
 ::-webkit-file-upload-button {
@@ -409,8 +409,8 @@ Make sure disabled buttons don't get the pointer cursor.
 }
 
 /*
-1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
-2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
+1. Make replaced elements display: block by default. (https://github.com/mozdevs/cssremedy/issues/14)
+2. Add vertical-align: middle to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
    This can trigger a poorly considered lint error in some tools but is included by design.
 */
 
@@ -642,9 +642,9 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(152 147 165 / var(--tw-border-opacity));
 }
-
+/* BG */
 .bg-\[\#1A1825D9\] {
-  background-color: #1A1825D9;
+  background-color: #131114d9;
 }
 
 .bg-\[\#1\] {
@@ -733,10 +733,10 @@ video {
 }
 
 .text-\[\#9ccfd880\] {
-  color: #9ccfd880;
+  color: #927f9780;
 }
-
-.text-\[\#9ccfd8\] {
+/* Pedro Ivo */
+.text-\[\#AA76C3\] {
   --tw-text-opacity: 1;
   color: rgb(156 207 216 / var(--tw-text-opacity));
 }
@@ -765,9 +765,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(86 148 159 / var(--tw-text-opacity));
 }
-
+/* IVO */
 .text-\[\#9ccfd8B3\] {
-  color: #9ccfd8B3;
+  color: #f4f9fa;
 }
 
 .underline {
@@ -794,10 +794,10 @@ video {
 .duration-700 {
   transition-duration: 700ms;
 }
-
+/* texto */
 body {
-  background-color: #9ccfd8;
-  color: #907aa9;
+  background-color: #ffffff;
+  color: #c291e2;
   background-image: url("assets/bg.jpg");
   background-attachment: scroll;
   background-size: cover;
@@ -901,11 +901,11 @@ b {
     opacity: 0;
   }
 }
-
+/* user input */
 #command {
   cursor: text;
   height: 50px;
-  color: #31748f;
+  color: #f9bbff;
 }
 
 #liner {
@@ -916,9 +916,10 @@ b {
   opacity: 0;
 }
 
+/* visitante@ivo */
 #liner::before {
-  color: #b4637a;
-  content: "[ivo@vegedra]~$";
+  color: #f4f9fa;
+  content: "[visitante@ivo]~$";
 }
 
 #liner.password::before {
@@ -950,13 +951,13 @@ b {
 .index {
   color: #dcdccc;
 }
-
+/* texto comandos */
 .color2 {
-  color: #8285c1f0;
+  color: #dcc2ee;
 }
-
+/* help */
 .command {
-  color: #9ccfd8;
+  color: #f4f9fa;
   text-shadow: 0 0 5px #31748f;
 }
 
@@ -967,10 +968,10 @@ b {
 .white {
   color: #fff;
 }
-
+/* side bar */
 .inherit,
 a {
-  color: #9ccfd8;
+  color: #cfa2ec;
 }
 
 a {
