--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 }
 
 body.light-mode header {
-    background-color: #f5f5f5; /* Cor de fundo mais clara no modo claro */
+    background-color: #fff; /* Cor de fundo mais clara no modo claro */
 }
 
 header nav ul {
@@ -180,7 +180,7 @@ footer {
 }
 
 body.light-mode footer {
-    background-color: #f5f5f5; /* Cor de fundo clara no modo claro */
+    background-color: #fff; /* Cor de fundo clara no modo claro */
     color: #333; /* Texto escuro no modo claro */
 }
 
